--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -35,6 +35,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+bind-key -t vi-copy Enter copy-pipe "nc localhost 8377"
+
 # vi mode
 setw -g mode-keys vi
 
