--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,5 +1,5 @@
 # more comfortable prefix
-set -g prefix C-a
+#set -g prefix C-a
 
 # remove tmux delay when sending commands
 set -sg escape-time 1
@@ -8,45 +8,34 @@ set -sg escape-time 1
 #set -g base-index 1
 setw -g pane-base-index 0
 
-bind m run 'pom stop'
-bind v run 'pom pause'
-bind b run 'pom start'
-
 # easy reloading of config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # mmemonic keys for window splitting
-bind | split-window -h
-bind - split-window -v
+# bind | split-window -h
+# bind - split-window -v
 
 # vim movement keys for switching panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # vim movement keys for switching windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # vim movement keys for resizing panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-bind-key -t vi-copy Enter copy-pipe "nc localhost 8377"
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 # vi mode
 setw -g mode-keys vi
 
-# mouse mode to enable scrolling
-setw -g mode-mouse on
-
 # ensure tmux uses 256 colors
 set -g default-terminal "screen-256color"
-
-setw -g utf8 on
 
 # theme
 
@@ -69,11 +58,11 @@ set -g message-attr dim
 
 set -g status-justify centre
 set -g status-left " #[fg=green,bright]#H#[fg=#004000] #[fg=#707070]• #[fg=green,bright]#S #[fg=#707070]❩"
-set -g status-right "#[fg=#707070]❨ #(pom tmux)#[fg=#00a0ff]%b%d #[fg=#707070]• #[fg=#00a0ff]#(time_in_zone America/Los_Angeles %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Denver %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Chicago %%H)#[fg=#707070]|#[fg=#ffa000]#(time_in_zone America/New_York)#[fg=#707070]|#[fg=#ff0000,bright]#(time_in_zone UTC %%H) "
+set -g status-right "#[fg=#707070]( • #[fg=#00a0ff]#(time_in_zone America/Los_Angeles %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Denver %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Chicago %%H)#[fg=#707070]|#[fg=#ffa000]#(time_in_zone America/New_York)#[fg=#707070]|#[fg=#ff0000,bright]#(time_in_zone UTC %%H) "
+
 
 
 # status bar
-set -g status-utf8 on
 set -g status-interval 1
 set -g status-left-length 40
 set -g status-right-length 60
@@ -88,3 +77,15 @@ bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
