--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -40,21 +40,12 @@ set -g default-terminal "screen-256color"
 # theme
 
 # one
-set -g status-fg white
-set -g status-bg black
-setw -g window-status-fg '#606000'
-setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg '#ffff00'
-setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-set -g message-fg white
-set -g message-bg black
-set -g message-attr dim
+set -g status-style fg=white,bg=black
+setw -g window-status-style fg='#606000',bg=default,dim
+setw -g window-status-current-style fg='#ffff00',bg=default,bright
+set -g pane-border-style fg=green,bg=black
+set -g pane-active-border-style fg=white,bg=yellow
+set -g message-style fg=white,bg=black,dim
 
 set -g status-justify centre
 set -g status-left " #[fg=green,bright]#H#[fg=#004000] #[fg=#707070]• #[fg=green,bright]#S #[fg=#707070]❩"
