Add dot-config files

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -16,10 +16,10 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # bind - split-window -v
 
 # vim movement keys for switching panes
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # vim movement keys for switching windows
 bind -r C-h select-window -t :-
