--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -51,7 +51,7 @@ set -g status-justify centre
 set -g status-left " #[fg=green,bright]#H#[fg=#004000] #[fg=#707070]• #[fg=green,bright]#S #[fg=#707070]❩"
 set -g status-right "#[fg=#707070]( • #[fg=#00a0ff]#(time_in_zone America/Los_Angeles %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Denver %%H)#[fg=#707070]|#[fg=#00a0ff]#(time_in_zone America/Chicago %%H)#[fg=#707070]|#[fg=#ffa000]#(time_in_zone America/New_York)#[fg=#707070]|#[fg=#ff0000,bright]#(time_in_zone UTC %%H) "
 
-
+set-option -g focus-events on
 
 # status bar
 set -g status-interval 1
